--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,12 +12,14 @@ jobs:
 
       - name: Install dependencies
         run: make install-deps
-
+        working-directory: ./model
+        
       - name: Deploy
         run: make deploy
+        working-directory: ./model
         env:
-          AWS_ACCESS_KEY_ID: {% raw %}${{ secrets.AWS_ACCESS_KEY_ID }}{% endraw %}
-          AWS_SECRET_ACCESS_KEY: {% raw %}${{ secrets.AWS_SECRET_ACCESS_KEY }}{% endraw %}
-          AWS_REGION: {% raw %}${{ secrets.AWS_REGION }}{% endraw %}
-          AWS_ECR_ACCOUNT_URL: {% raw %}${{ secrets.AWS_ECR_ACCOUNT_URL }}{% endraw %}
-          PULUMI_ACCESS_TOKEN: {% raw %}${{ secrets.PULUMI_ACCESS_TOKEN }}{% endraw %}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_ECR_ACCOUNT_URL: ${{ secrets.AWS_ECR_ACCOUNT_URL }}
+          AWS_REGION: us-west-2
+          PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
